# imagegen

./: README.md  pyproject.toml
config/: config.yaml  ddpm_config.yaml
intro_dgm/vaes/: vae_example.py
notebooks/: annotated_diffusion.ipynb  annotated_diffusion_celeba.ipynb  annotated_diffusion_celeba2.ipynb  diffusion_2015.ipynb
src/imagegen/: data.py  ddpm_pipeline.py  ddpm_sample.py  ddpmeval.py  ddpmhuggingface.py  evalddpm.py  fileutil.py  models.py  pipeline.py  probfn.py  setup.py  stablediff.py  train.py  unet.py  utils.py  vae.py  vae2.py
